--- a/2. feladat/style.css
+++ b/2. feladat/style.css
@@ -1,45 +1,82 @@
 /* 1. feladat */
 
-div{
+div:first-of-type{
     width: 800px;
     height: 300px;
     display: flex;
     background-color: yellow;
+    align-items: center;
+    justify-content: center;
 }
-div>div:first-child{
+div:first-of-type>div:first-child{
     background-color: green;
     display: none;
     height: 100px;
     width: 100px;
 }
-div>div:nth-child(2){
+div:first-of-type>div:nth-child(2){
     background-color: yellow;
     display: none;
     height: 100px;
     width: 100px;
+    
 }
-div>div:last-child{
+div:first-of-type>div:last-child{
     background-color: purple;
     height: 100px;
     width: 100px;
-    margin: auto;
 }
 
 /* 2. feladat */
 
-ul{
+div:nth-of-type(2){
     width: 100%;
     height: 400px;
     background-color: yellow;
     display: flex;
-    padding-left: 0;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
 }
-ul:first-of-type>li{
+div:nth-of-type(2)>li{
     background-color: purple;
     width: 100px;
     height: 100px;
-    margin: auto 1vw;
     list-style: none;
-    margin-left: 0;
-    padding-left: 0;
+
+}
+
+/* 3. feladat */
+
+div:nth-of-type(3){
+    width: 100%;
+    height: 400px;
+    background-color: yellow;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+div:nth-of-type(3)>li{
+    background-color: purple;
+    width: 100px;
+    height: 100px;
+    list-style: none;
+}
+
+/* 4. feladat */
+
+div:nth-of-type(4){
+    width: 100%;
+    height: 400px;
+    background-color: yellow;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    gap: 10px;
+}
+div:nth-of-type(4)>li{
+    background-color: purple;
+    width: 100px;
+    height: 100px;
+    list-style: none;
 }
