--- a/3. feladat/style.css
+++ b/3. feladat/style.css
@@ -1,27 +1,43 @@
+body{
+    margin: 0;
+    padding: 0;
+}
+
 nav{
     width: 90vw;
     background-color: purple;
     height: 10vh;
     display: flex;
+    margin: 0 auto;
+    margin-top: 5vh;
+    gap: 2vw;
+    align-items: center;
 }
-nav>div{
-    background-color: aqua;
-    width: 10vw;
-    height: 5vh;
-    margin: auto 2vw;
 
+nav>div{
+    display: flex;
+    background-color: aqua;
+    width: 9vw;
+    height: 5.5vh;
 }
+
+nav>div:first-child{
+    margin-left: 2vw;
+}
+
 main{
     width: 90vw;
     height: 70vh;
     display: flex;
+    margin: 0 auto;
 }
+
 main>div:first-child{
     background-color: yellow;
     height: auto;
     flex: 5;
-    
 }
+
 main>div:last-child{
     background-color: green;
     height: auto;
