--- a/4. feladat/style.css
+++ b/4. feladat/style.css
@@ -1,9 +1,14 @@
+body{
+    margin: 0;
+    padding: 0;
+}
+
 nav{
     background-color: purple;
     max-width: 100vw;
     height: 10vh;
     display: flex;
-    gap: 10px;
+    gap: 2vh;
     align-items: center;
     padding-left: 10vw;
 
@@ -12,7 +17,7 @@ nav{
 nav>div{
     background-color: aqua;
     width: 7%;
-    height: 40%;
+    height: 50%;
 }
 
 main{
