--- a/fetchgyakorlas/autok.css
+++ b/fetchgyakorlas/autok.css
@@ -1,7 +1,24 @@
+*{margin: 0; padding: 0;}
+
+h1{
+    text-shadow: 1px 1px rgb(153, 153, 140);
+}
 body{
-    width: 80vw;
+    background-image: url("background.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    backdrop-filter: blur(5px);
+    width: auto;
+    min-height: 100vh;
 }
 
-#card{
-    
+.card>img{
+      width: 100%;
+      height: 25vh
+}
+.card>div:first-of-type{
+    margin-bottom: -1vh;
+}
+.row{
+    width: 82vw;
 }
