--- a/fetchgyakorlas/autok.css
+++ b/fetchgyakorlas/autok.css
@@ -2,6 +2,11 @@
 
 h1{
     text-shadow: 1px 1px rgb(153, 153, 140);
+    letter-spacing: 1px;
+}
+#h1background{
+    padding-top: 3px;
+    background-color: rgba(128, 128, 128, 0.39);
 }
 body{
     background-image: url("images/background.jpg");
@@ -10,6 +15,7 @@ body{
     backdrop-filter: blur(5px);
     width: auto;
     min-height: 100vh;
+    margin: 0 auto;
 }
 
 .card>img{
@@ -19,6 +25,9 @@ body{
 .card>div:first-of-type{
     margin-bottom: -1vh;
 }
-.row{
-    width: 82vw;
+.container{
+    margin: 0 auto
+}
+.card{
+    background-color: rgba(255, 255, 255, 0.85);
 }
